# sensor_degradation_filter

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  requirements_python3-12.txt  setup.py
.devcontainer/: devcontainer.json
argos/: kheperaiv_5_tiled.argos  kheperaiv_qr_vicon.argos  param_multi_robot_sim_1d_dynamic_degradation.argos  param_multi_robot_sim_1d_static_degradation.argos  test_kheperaiv_diffusion_controller.argos
docs/: dev_notes.md  parameter_file_setup.md  utility_scripts_functions.md
examples/param/: param_multi_robot_sim_1d_dynamic_degradation.argos  param_multi_robot_sim_1d_dynamic_degradation_DELTA.argos  param_multi_robot_sim_1d_dynamic_degradation_ORACLE.argos  param_multi_robot_sim_1d_static_degradation.argos  param_multi_robot_sim_1d_static_degradation.yml
include/sensor-degradation-filter/: Arena.hpp  CollectivePerceptionAlgorithm.hpp  Util.hpp
include/sensor_degradation_filter/: Util.hpp
notebooks/: exploring_vi_solutions.ipynb  general_module.py  multi_robot_sim_1d_static_degradation.ipynb  notebook_module.py  single_robot_sim_module.py  static_degradation_viz_module.py  vi_simulation.ipynb  vi_simulation_module.py  visualize_multi_robot_static_degradation_data_correct.ipynb  visualize_multi_robot_static_degradation_data_correct_ALPHA.ipynb  visualize_multi_robot_static_degradation_data_correct_BRAVO.ipynb  visualize_multi_robot_static_degradation_data_over_under_estimation.ipynb  visualize_multi_robot_static_degradation_data_over_under_estimation_ALPHA.ipynb  visualize_multi_robot_static_degradation_data_over_under_estimation_BRAVO.ipynb
notebooks/notebook_modules/: vi_simulation_module.py
scripts/bash/: extract_pdf_images_from_drawio.sh  extract_svg_images_from_drawio.sh  hpc_dynamic_topo_job_alpha_template.sh  hpc_multi_job_compute_rmsd_df.sh  hpc_multi_job_dynamic_topo_dynamic_dec_run_DELTA.sh  hpc_multi_job_dynamic_topo_dynamic_dec_run_ORACLE.sh  hpc_multi_job_dynamic_topo_dynamic_deg_run_DELTA.sh  hpc_multi_job_dynamic_topo_dynamic_deg_run_ORACLE.sh  hpc_multi_job_dynamic_topo_extract_conv_acc_data.sh  hpc_multi_job_dynamic_topo_static_deg_run_ALPHA.sh  hpc_multi_job_dynamic_topo_static_deg_run_BRAVO.sh  hpc_multi_job_extract_dynamic_degradation_data.sh  hpc_multi_job_static_topo_extract_conv_acc_data.sh  hpc_multi_job_static_topo_static_deg_run.sh  local_single_job_dynamic_topo_dynamic_deg_run_DELTA.sh  sbatch_dynamic_topo_dynamic_deg_run.sh  sbatch_dynamic_topo_dynamic_deg_run_DELTA.sh  sbatch_dynamic_topo_static_deg_run.sh  sbatch_static_topo_static_deg_run.sh  sbatch_topo_dynamic_deg_run_ORACLE.sh  tar_files_into_flat_dir.sh
scripts/python/: compute_rmsd_df.py  dynamic_degradation_viz_module.py  extract_convergence_accuracy_data.py  extract_decision_data.py  extract_dynamic_degradation_data.py  extract_isolated_rmsd_data.py  param_multi_robot_sim_1d_static_degradation.yml  run_static_degradation_experiment.py  sim_module.py  static_degradation_viz_module.py
scripts/streamlit/: sim_data_VI_121723_234636.sdv  sim_data_VI_121723_235437.sdv  sim_data_VI_121823_012251.sdv  sim_data_VI_121823_085151.sdv  (+4 more)
src/: Arena.cpp  CMakeLists.txt  CollectivePerceptionAlgorithm.cpp  compute_wall_positions.cpp  run_dynamic_topo_simulations.cpp
src/algorithms/: CMakeLists.txt  CollectivePerception.cpp  DynamicDegradationFilterCharlie.cpp  DynamicDegradationFilterDelta.cpp  ELBO.cpp  ExtendedKalmanFilter.cpp  Oracle.cpp  StaticDegradationFilterAlpha.cpp  StaticDegradationFilterBravo.cpp
src/controllers/: CMakeLists.txt  KheperaIVDiffusionMotion.cpp  KheperaIVStaticDeg.cpp
src/loop_functions/: CMakeLists.txt  SensorDegLoopFunctions.cpp  StaticDegLoopFunctions.cpp
src/tests/: CMakeLists.txt  test_elbo_class.cpp
(+14 files in other folders)
